# cryptsy_scope

./: .gitignore  CMakeLists.txt  README.md  manifest.json
data/: CMakeLists.txt  Cryptsy.ini.in
src/: CMakeLists.txt  Cryptsy-preview.cpp  Cryptsy-preview.h  Cryptsy-query.cpp  Cryptsy-query.h  Cryptsy-scope.cpp  Cryptsy-scope.h
